# code_terminal

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/agent-harness/: README.md  handoff.md  memory.yaml  rules.md  skills.md  subagents.md
docs/key-code-share/: README.md  TerminalComposer.core.tsx  TerminalSessionView.core.tsx  backend-pty-core.rs  clipboardImages.core.ts  minimal-dependencies.md  tauriRuntime.core.ts
src/: App.tsx  TerminalPane.tsx  TerminalSessionView.tsx  clipboardImages.ts  ids.ts  styles.css  tauriRuntime.ts  terminalThemes.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  server.rs
