[package]
name = "opencode-workbench"
version = "0.1.0"
description = "A small Tauri project terminal workbench"
authors = ["OpenCode Workbench"]
edition = "2021"

[lib]
name = "opencode_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
portable-pty = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows-version = "0.1.7"
