[package]
name = "code-terminal"
version = "0.1.0"
description = "A lightweight tiled project terminal"
authors = ["Code Terminal"]
edition = "2021"
default-run = "code-terminal"

[lib]
name = "opencode_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["desktop"]
desktop = ["dep:tauri", "dep:tauri-build", "dep:tauri-plugin-dialog"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
portable-pty = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [], optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tower-http = { version = "0.5", features = ["fs"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows-version = "0.1.7"
